--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-SimbirSoft. Week 1/SimbirSoft. Week 1. Task 1.1/**/out
-SimbirSoft. Week 1/SimbirSoft. Week 1. Task 1.1/**/.idea
-SimbirSoft. Week 1/SimbirSoft. Week 1. Task 1.1/**/*.iml
+*.iml
+out/
+.idea/
