--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 SimbirSoft. Week 1/**/*.iml
 SimbirSoft. Week 1/**/out/
 SimbirSoft. Week 1/**/.idea/
+
+Week 2/**/*.iml
+Week 2/**/out/
+Week 2/**/.idea/
