--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-SimbirSoft. Week 1/**/*.iml
-SimbirSoft. Week 1/**/out/
-SimbirSoft. Week 1/**/.idea/
-
-Week 2/**/*.iml
-Week 2/**/out/
-Week 2/**/.idea/
+*.iml
+**/out/
+**/.idea/
