--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 SimbirSoft. Week 1/**/*.iml
 SimbirSoft. Week 1/**/out/
 SimbirSoft. Week 1/**/.idea/
+
+SimbirSoft. Week 3/**/*.iml
+SimbirSoft. Week 3/**/out/
+SimbirSoft. Week 3/**/.idea/
+SimbirSoft. Week 3/**/.txt/
