--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 SimbirSoft. Week 1/**/*.iml
 SimbirSoft. Week 1/**/out/
 SimbirSoft. Week 1/**/.idea/
+Week 1/**/*.iml
+Week 1/**/out/
+Week 1/**/.idea/
